[package]
name = "igra"
version = "0.1.0"
authors = ["AjaxStudio <ajaxii@yandex.ru>"]
edition = "2021"
rust-version = "1.56"
description = "Interactive Graphical Rust Applications (builder)"
readme ="read.me" 
# See more keys and their definitions at https://doc.ruseframe_templatet-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
egui = "0.17.0"
cmd_lib = "1.3.0"
epi = "0.17.0"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
